--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,11 @@
 	"manifest_version": 2,
 	
 	"description": "あの日のふたりと今をつなぎます。",
+
+	"icons": {
+		"48": "icon48.png",
+		"128": "icon128.png"
+	},
 	
 	"browser_action": {
 		"default_icon": "icon.png",
